tests/fail/elaboration/duplicate-field-labels/record-pattern.snap
stdout = ''
stderr = '''
error: duplicate labels found in record
  ┌─ tests/fail/elaboration/duplicate-field-labels/record-pattern.fathom:3:12
  │
3 │ let {x, y, x} = {x = false, y = true};
  │     -------^-
  │     │      │
  │     │      duplicate field
  │     the record literal
  │
  = duplicate fields `x`

'''
